# Python-Estudos

./: README.md
Bootcamp-Python/Aula07_bootcamp/: desafio.txt  etl.py  main.py  vendas.csv
Bootcamp-Python/Aula08_bootcamp/: dados.parquet  etl.py  pipeline.py  pyproject.toml
