[project]
name = "aula08-bootcamp"
version = "0.1.0"
description = ""
authors = [{name = "Matheus Sobreira", email = "matheussobreira2702@gmail.com"}]
requires-python = ">=3.9"

# Dependências como strings
dependencies = [
    "pandera>=0.23.1,<0.24.0",
    "pandas>=2.2.3,<3.0.0",
    "pyarrow>=19.0.1,<20.0.0",
    "fastparquet>=2024.11.0,<2025.0.0"
]

# Adicionando a seção de pacotes
packages = [{include = "aula08_bootcamp"}]  # Defina o nome do seu módulo ou diretório aqui

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
